# okf-agents

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  langgraph-okf-spec.md  llms.txt  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/assets/: README.md
.github/workflows/: ci.yml  release.yml
docs/: api-reference.md  concepts.md  launch-checklist.md  navigator-and-budgets.md  testing.md  vector-stores.md
docs/tasks/: 00-shared-contracts.md  01-project-foundation.md  02-models-and-parser.md  03-bundle-graph-search.md  04-agent-tools.md  05-keyword-retriever.md  06-navigator-subgraph.md  07-router-node.md  08-vector-indexing-graph-retriever.md  09-integration-e2e.md  10-release-and-discoverability.md  README.md
examples/support-agent/: README.md  demo.py
examples/support-agent/knowledge-base/: index.md
examples/support-agent/knowledge-base/concepts/: account-setup.md  billing.md  refunds.md  troubleshooting.md
langgraph_okf/: __init__.py  bundle.py  exceptions.py  indexing.py  navigator.py  retriever.py  router.py  tools.py
langgraph_okf/_internal/: graph_utils.py  parser.py
okf_agents/: __init__.py  bundle.py  exceptions.py  indexing.py  models.py  navigator.py  retriever.py  router.py  tools.py
okf_agents/_internal/: graph_utils.py  parser.py
tests/: conftest.py  provider_support.py
tests/e2e/: conftest.py  test_full_workflow.py
tests/fixtures/sample_bundle/: index.md  log.md
tests/fixtures/sample_bundle/concepts/: customers.md  index.md  orders.md  payments.md
tests/fixtures/sample_bundle/guides/: getting-started.md
tests/integration/: conftest.py  test_hybrid_retriever.py  test_navigator.py
tests/unit/: test_bundle.py  test_exceptions.py  test_graph_utils.py  test_indexing.py  test_models.py  test_navigator.py  test_parser.py  test_retriever.py  test_router.py  test_tools.py
